--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,9 +1,14 @@
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import "~bootstrap/dist/css/bootstrap.min.css";
 
 /* 设置导航栏的高度和背景颜色 */
 .navbar {
-  height: 55px;
+  width: 100%;
+  height: 43px;
   background-color: #000;
+}
+
+.transparent-background {
+  background-color: transparent !important;
 }
 
 /* 设置 logo 离左边缘的距离 */
@@ -13,24 +18,37 @@
 
 /* 设置导航链接的字体大小和间距 */
 .navbar-nav .nav-link {
-  font-size: 20px;
+  font-size: 18px;
   margin-right: 15px;
+  color: #e6e3e3;
 }
 
 /* 修改激活状态下导航链接的样式 */
 .nav-link.active,
 .nav-link:focus {
   box-shadow: none !important;
-  border-color: transparent; /*添加这一行去掉边框的颜色*/
+  border-color: transparent;
+  font-size: 18px;
+  color: #fff;
+  font-weight: bold; /* 添加这一行将字体加粗 */
 }
 
 /* 在激活状态下修改导航链接的样式 */
 .nav-link.active {
-  color: #fff;
-  background-color: #212020;
+  font-size: 18px;
+  background-color: #434242;
   border-radius: 0;
 }
- 
+
+/* 在鼠标悬停时修改导航链接的样式 */
+.nav-link:hover {
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #848282;
+  border-radius: 2px;
+}
+
 /* 设置登录和注册按钮的样式 */
 #loginBtn,
 #signupBtn {
