--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,14 +13,20 @@
 
 /* 设置 logo 离左边缘的距离 */
 .navbar-brand {
-  margin-left: 30px;
+  margin-left: 50px;
+  align-items: center; /* 竖直居中 */
 }
 
 /* 设置导航链接的字体大小和间距 */
 .navbar-nav .nav-link {
-  font-size: 18px;
-  margin-right: 15px;
+  font-size: 17px;
+  margin-right: 20px;
   color: #e6e3e3;
+  /*align-items: center; /* 竖直居中 */
+  width: 55px; /* 设置宽度为100px */
+  height: 40px; /* 设置高度为30px */
+  display: flex;
+  justify-content: center; /* 水平居中 */
 }
 
 /* 修改激活状态下导航链接的样式 */
@@ -28,38 +34,42 @@
 .nav-link:focus {
   box-shadow: none !important;
   border-color: transparent;
-  font-size: 18px;
+  font-size: 17px;
   color: #fff;
-  font-weight: bold; /* 添加这一行将字体加粗 */
+  /*font-weight: bold; /* 添加这一行将字体加粗 */
 }
 
 /* 在激活状态下修改导航链接的样式 */
 .nav-link.active {
-  font-size: 18px;
+  font-size: 17px;
   background-color: #434242;
   border-radius: 0;
 }
 
 /* 在鼠标悬停时修改导航链接的样式 */
 .nav-link:hover {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 17px;
+  /*font-weight: bold;*/
   color: #fff;
-  background-color: #848282;
+  background-color: #434242;
   border-radius: 2px;
 }
 
-/* 设置登录和注册按钮的样式 */
-#loginBtn,
-#signupBtn {
-  font-size: 25px;
-  font-weight: bold;
+.loginBtn,
+.signupBtn {
+  font-size: 13px;
+  /*font-weight: bold;*/
   text-transform: uppercase;
-  padding: 6px 22px;
+  align-items: center; /* 竖直居中 */
+  width: 60px; /* 设置宽度为100px */
+  height: 30px; /* 设置高度为30px */
+  border: 1px solid #fff; /* 设置边框为1px黑色实线 */
 }
 
-/* 设置登录和注册按钮的字体大小 */
-#loginBtn.btn,
-#signupBtn.btn {
-  font-size: 13px;
+.loginBtn {
+  margin-right: 10px;
+}
+
+.signupBtn {
+  margin-right: 40px;
 }
