--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap");
 
 .register-container {
   display: flex;
@@ -10,7 +10,7 @@
 }
 
 h1 {
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: "Noto Sans SC", sans-serif;
   font-size: 2rem;
   margin-bottom: 30px;
 }
@@ -37,7 +37,7 @@ form {
 }
 
 label {
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: "Noto Sans SC", sans-serif;
   font-weight: bold;
   font-size: 0.9rem;
   position: absolute;
@@ -47,8 +47,11 @@ label {
   pointer-events: none;
 }
 
-input[type='text'], input[type='password'], input[type='email'], select {
-  font-family: 'Noto Sans SC', sans-serif;
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select {
+  font-family: "Noto Sans SC", sans-serif;
   border: none;
   border-radius: 8px;
   padding: 15px;
@@ -59,58 +62,59 @@ input[type='text'], input[type='password'], input[type='email'], select {
   outline: none;
 }
 
-button[type='submit'] {
-  font-family: 'Noto Sans SC', sans-serif;
+button[type="submit"] {
+  font-family: "Noto Sans SC", sans-serif;
   background-color: #5f5cf2;
   color: #fff;
   border-radius: 13px;
-  font-size: 1.1rem;margin-top: 20px;
+  font-size: 1.1rem;
+  margin-top: 20px;
   padding: 14px 35px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   width: 350px;
   border: none;
-  }
-  
-  button[type='submit']:hover {
+}
+
+button[type="submit"]:hover {
   background-color: #646464;
-  }
-  
-  .signup-container {
+}
+
+.signup-container {
   display: flex;
   justify-content: space-between;
-  }
-  
-  .signup-text {
-  font-family: 'Noto Sans SC', sans-serif;
+}
+
+.signup-text {
+  font-family: "Noto Sans SC", sans-serif;
   font-size: 0.8rem;
   margin-top: 20px;
   text-align: center;
-  }
-  
-  .signup-text a {
-  font-family: 'Noto Sans SC', sans-serif;
+}
+
+.signup-text a {
+  font-family: "Noto Sans SC", sans-serif;
   font-size: 0.7rem;
-  }
-  
-  .signup-left {
-  font-family: 'Noto Sans SC', sans-serif;
+}
+
+.signup-left {
+  font-family: "Noto Sans SC", sans-serif;
   font-size: 0.7rem;
   display: flex;
   justify-content: flex-start;
   width: 50%;
-  }
-  
-  .signup-right {
-  font-family: 'Noto Sans SC', sans-serif;
+}
+
+.signup-right {
+  font-family: "Noto Sans SC", sans-serif;
   font-size: 0.7rem;
   display: flex;
   justify-content: flex-end;
   width: 50%;
-  }
-  
-  .login-button {
-  font-family: 'Noto Sans SC', sans-serif;
+}
+
+.login-button {
+  font-family: "Noto Sans SC", sans-serif;
   background-color: #5f5cf2;
   color: #fff;
   border-radius: 25px;
@@ -118,13 +122,13 @@ button[type='submit'] {
   padding: 10px 30px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  }
-  
-  .signup-button {
-  font-family: 'Noto Sans SC', sans-serif;
+}
+
+.signup-button {
+  font-family: "Noto Sans SC", sans-serif;
   background-color: transparent;
   color: #000;
   border: none;
   font-size: 0.9rem;
   cursor: pointer;
-  }
+}
