--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -60,9 +60,10 @@
   font-size: 13px;
   /*font-weight: bold;*/
   align-items: center; /* 竖直居中 */
-  width: 60px; /* 设置宽度为100px */
+  width: 55px; /* 设置宽度为100px */
+  min-width: 55px; /* 固定宽度 */
   height: 30px; /* 设置高度为30px */
-  border: 1px solid #fff; 
+  border: 1px solid #fff;
 }
 
 .loginBtn {
@@ -72,5 +73,3 @@
 .signupBtn {
   margin-right: 40px;
 }
-
-
